# encabulator

./: Cargo.toml  README.md
src/: lib.rs
src/architecture/: coordinate.rs  mod.rs
src/architecture/baryonic_connector/: node.rs
src/frobnication/electron_fencing/: mod.rs
src/phase_selectors/: alpha.rs  mod.rs
src/tables/: cancer.rs  mod.rs
